--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "postcss": "^8.4.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "vite-plugin-html-purgecss": "^0.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
     "sass": "^1.49.8",
