--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,8 @@
   "extends": ["stylelint-config-standard-scss"],
   "rules": {
     "selector-class-pattern": null,
-    "custom-property-pattern": null
+    "custom-property-pattern": null,
+    "no-descending-specificity": null,
+    "string-quotes": "single"
   }
 }
