--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,17 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
+    "framer-motion": "^6.2.6",
     "postcss": "^8.4.6",
-    "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.8",
     "vite-plugin-html-purgecss": "^0.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
-    "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
-    "sass": "^1.49.8",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "vite": "^2.8.0"
   }
