--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.4.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.49.8",
     "vite-plugin-html-purgecss": "^0.1.1"
   },
