--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "compile:sass": "sass --watch ./src/App.scss:src/index.css"
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
