--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "compile:sass": "sass --watch ./src/App.scss:src/index.css"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
+    "@hookform/resolvers": "^2.8.8",
     "autoprefixer": "^10.4.2",
     "framer-motion": "^6.2.6",
     "postcss": "^8.4.6",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-tooltip": "^4.2.21",
     "sass": "^1.49.8",
-    "vite-plugin-html-purgecss": "^0.1.1"
+    "vite-plugin-html-purgecss": "^0.1.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
